[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remini-unofficial-api"
version = "0.1.0"
authors = [
  { name="Seuriin", email="seuriin@gmail.com" },
]
description = "A Python library for enhancing images using the unofficial Remini API."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MPL-2.0" }
keywords = ["remini", "api", "image", "enhancement", "upscale"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MPL-2.0 License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics :: Editors",
    "Intended Audience :: Developers",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
pil = ["Pillow>=9.0.0"]

[project.urls]
Homepage = "https://github.com/SSL-ACTX/remini-upscale-api"
"Bug Tracker" = "https://github.com/SSL-ACTX/remini-upscale-api/issues"
